<resources>
    <string name="app_name">MoreAppLibrary</string>
    <string name="title">More apps</string>
    <string name="install">INSTALL</string>

    <string name="vaina">Ver películas en línea populares HD gratis

EasyTV contiene la última y más reciente colección de películas y tiene muchas categorías como Hollywood English Movies, Romantic Movies, Action Movies, Horror Movies, Drama Movie, Funny and Comedy Movie Scene, Emotional Movie, Popular Movies, Historical Movies. , Crime Movies, Comedy Movies y muchas más películas.

Ver canales de TV Latina en linea completamente gratis.

Películas en español Castellano
Películas en español Latino
Series de Tv

Una app novedosa, sencilla y facil de manejar que puedes compartir con tus amigos, donde quiere que estés.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_ad">Cargando...</string>
    <string name="app_desc">PelisPLUS Chromecast, es una nueva app compatible TV Chromecast para ver pelis gratis en Android</string>
    <string name="download_ins">DOWNLOAD</string>
    <string name="_ad">Advertising</string>
    <string name="installs">Installs</string>
    <string name="featured">Featured</string>
    <string name="more_rated">Best rated</string>
    <string name="more_downloads">More downloads</string>
</resources>
