<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="355dp">


    <LinearLayout
        android:id="@+id/linlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_apps" />

        <TextView
            android:id="@+id/title_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>


    <ImageView
        android:id="@+id/contentImg"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@id/linlay"
        android:layout_marginTop="5dp"
        app:srcCompat="@drawable/bg_dialog_2" />

    <WebView
        android:id="@+id/desc_app"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/contentImg"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/vaina"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/install"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_app"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:text="@string/install"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="18sp" />

</RelativeLayout>