<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top"
    tools:context=".ViewAppActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteplate"
        android:id="@+id/bg"
        />

    <ImageView
        android:layout_width="40dp"
        android:id="@+id/tolb"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="2dp"
        app:srcCompat="@drawable/ic_back"
        android:tint="@color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:layout_above="@id/lay_bottom"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imagebig"
            android:layout_width="155dp"
            android:layout_height="155dp"
            android:transitionName="img" />

        <TextView
            android:id="@+id/secondTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <WebView
            android:id="@+id/secondDesc"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

        </WebView>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rate_bar"
            android:layout_gravity="center_horizontal"
            android:rating="3"
            android:theme="@style/RatingBar"
            android:visibility="gone"
            android:layout_margin="5dp"
            />

        <TextView
            android:id="@+id/installs_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto"
            android:text="@string/installs"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:visibility="gone"
            />



    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/colorIndic"
        android:id="@+id/bottomla"
        app:cardElevation="0dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:id="@+id/lay_bottom"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="25dp"
            android:layout_height="100dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="110dp"
                android:scaleType="fitCenter"
                android:layout_marginTop="5dp"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="15dp"
                android:id="@+id/google_play_ad"
                app:srcCompat="@drawable/google_play_ic"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="12dp"
                    android:id="@+id/img_ad"
                    app:srcCompat="@drawable/ad_choices"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="2dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_ad"
                    android:textSize="12sp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/white"
                    android:gravity="start"
                    android:layout_marginStart="2dp"
                    android:textAlignment="textStart"
                    />

            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorIndicDark"
                android:layout_alignParentEnd="true"
                android:id="@+id/action1"
                android:layout_marginEnd="25dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                >
                <TextView
                    android:id="@+id/action_app_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/download_ins"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_margin="20dp"
                    android:textStyle="normal"/>


            </androidx.cardview.widget.CardView>


        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>